<resources>
    <string name="app_name">Spots</string>
    <string name="accountCreated">Account created!</string>
    <string name="alreadyEmailExist">This email already exists</string>
    <string name="invalidPassword">Please introduce a valid password</string>
    <string name="invalidCredentials">Invalid credentials!</string>
    <string name="OK">OK</string>
    <string name="wrongEmailFormat">Please introduce a valid email\\\\. e\\\\.g\\\\.: xxx@xxx\\\\.xx</string>
    <string name="welcomeMessage">Welcome to Spots</string>
    <string name="connectionFailed">Connection Failled!</string>
    <string name="noparque">You do not have a default park!</string>
    <string name="Parque">Parque: </string>
    <string name="Login">Login</string>
    <string name="Regist">Regist</string>
    <string name="noavailablespots">There are no available spots</string>
    <string name="google_maps_key">AIzaSyDMs5nmY0XmfgTbA52hwxXDiv1CaM0XOCk</string>
    <string name="googelStyle" />
    <string name="somethingWentWrong">Something went wrong!</string>
    <string name="notAllowed">You are not allowed to do this.</string>
    <string name="differentPasswords">Please introduce the same password</string>
    <string name="emailLabel">Email:</string>
    <string name="passwordLabel">Password:</string>
    <string name="confirm_passwordLabel">Confirm Password:</string>
    <string name="logout">Logout</string>
    <string name="notHaveSavedSpot">You dont have a saved spot</string>
    <string name="ratePlease">Rate the spot please</string>
    <string name="addedToFavorites">Spot added to favourites</string>
    <string name="thanksMSG">Thanks for using this spot. Have a nice trip!</string>
    <string name="keepMeSigned">Keep me signed</string>
    <string name="goodByeMessage">Thanks for using our app</string>
    <string name="noavailablespots_inpark">There\'s no empty spots available in this park</string>
    <string name="myAccountTitle">Spots My Account</string>
    <string name="myAccountInfo">Spots Info</string>
    <string name="profileUpdated">Profile updated!</string>
    <string name="insertSamePass">Please insert the same password</string>
    <string name="insertPassConf">Please insert password confirmation</string>
    <string name="wrongFormatPass">Password with wrong format</string>
    <string name="carNotFound">Your car is on another Park!</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="set_the_rating_of_your_spot">Set the Rating of your spot!</string>
    <string name="favspot">SPOT DO A</string>
    <string name="delete">Delete</string>
    <string name="spotDeleted">Spot deleted!</string>
    <string name="my_profile">My profile</string>
    <string name="my_profile_lbl">My Profile:</string>
    <string name="favourite_spots">Favourite spots:</string>
    <string name="OcupadoPorOutroCarro">Spot Ocupado por outro veículo de momento</string>
    <string name="alreadyHaveSpot">You already have a spot!</string>
    <string name="spotAdded">Spot added</string>
    <string name="location_disabled">Pls turn on Location on your device!</string>
    <string name="wrongHourFormart">Please insert the hour correctly</string>
    <string name="introduceStartHour">Please insert the start hour</string>
    <string name="introduceEndHour">Please insert the end hour</string>
    <string name="selectAType">Please select a type</string>
    <string name="naoSeAplicaFiltro">This filter can not be applied!</string>
    <string name="insertDescription">Please insert a description</string>
    <string name="reportSubmitted">Thanks for your help</string>
    <string name="spotDoesNotExist">Spot does not exist</string>
    <string name="insertType">Please insert a type of report</string>
    <string name="pls_post_photo">Please insert a photo of the incident</string>
</resources>
