<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DashboardActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:onClick="makeLogin"
            android:text="@string/Login" />

        <Button
            android:id="@+id/btnRegist"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:onClick="makeRegist"
            android:text="@string/Regist" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/txtViewNomeParque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Parque" />

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:text="@string/noparque" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Last update:" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        tools:context="com.example.ecko.spots.DashboardActivity" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridviewParque"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"></GridView>
</LinearLayout>