<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticatedDashboardActivity"
    android:orientation="vertical">


    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/txtViewProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_profile_lbl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnProfile"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:onClick="onClickPerfil"
            android:text="@string/my_profile" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:onClick="makeLogout"
            android:text="Logout" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Last update:" />

    <Spinner
        android:id="@+id/availableSpotsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMySpot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="My Spot" />

        <Button
            android:id="@+id/btnFindMeASpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="findMeASpot"
            android:text="Find Me A Spot" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnStatistics"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onStatistics"
            android:text="Statistics" />

        <Button
            android:id="@+id/btnMoreInfo"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="More Info"
            android:onClick="onClickMoreInfo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnIncidentReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickReport"
            android:text="Incident Report" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/txtViewNomeAuthParque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Parque" />

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:text="@string/noavailablespots" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <fragment
        android:id="@+id/mapAuth"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        tools:context="com.example.ecko.spots.AuthenticatedDashboardActivity" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridviewAuthParque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp">

    </GridView>

    <TextView
        android:id="@+id/textMyLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>